--- a/style.css
+++ b/style.css
@@ -434,17 +434,12 @@ a {
   clear: both;
   display: block;
   float: left;
-    width: 100%;
-    background-color: grey;
+  width: 100%;
+  background-color: grey;
 }
 
-.main-navigation .nav-menu {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.main-navigation .nav-menu a:not(:hover) {
-    color: #404040;
+.main-navigation a:not(:hover) {
+  color: #404040;
 }
   .main-navigation ul {
     display: none;
@@ -478,14 +473,19 @@ a {
 /* Small menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
-  display: block; }
+  display: flex;
+  justify-content: space-evenly;
+}
 
 @media screen and (min-width: 37.5em) {
   .menu-toggle {
     display: none; }
 
   .main-navigation ul {
-    display: block; } }
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
 .site-main .comment-navigation,
 .site-main .posts-navigation,
 .site-main .post-navigation {
@@ -615,75 +615,75 @@ a {
 --------------------------------------------------------------*/
 .site-header .custom-header {
   position: absolute;
-    z-index: -100;
-    width: 100%;
-    height: 50vh;
-    overflow: hidden;
+  z-index: -100;
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
 }
 
 .site-header .custom-header div, .site-header .custom-header img {
     min-height: 50vh;
     min-width: 100%;
     max-width: unset;
-    width: auto;
+  width: auto;
 }
 .site-header .site-branding {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
 .site-header .site-branding .custom-logo-link {
-    height: 50%;
+  height: 50%;
 }
 
 .site-header .site-branding .custom-logo-link img {
-    height: 100%;
-    width: auto;
+  height: 100%;
+  width: auto;
 }
 
 .site-header .site-branding a {
     color: #404040;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .site-header .site-branding h1, .site-header .site-branding p {
-    margin: 0;
+  margin: 0;
 }
 
 /*--------------------------------------------------------------
 ## Content
 --------------------------------------------------------------*/
 .content-home {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .content-home article {
     position: relative;
     margin: 0;
-    flex: 1 0 300px;
+  flex: 1 0 300px;
 }
 
 .content-home article .thumbnail {
-    min-height: 300px;
+  min-height: 300px;
 }
 
 .content-home article .thumbnail img {
-    min-width: 100%;
-    max-width: unset;
+  min-width: 100%;
+  max-width: unset;
 }
 
 .content-home article .entry-header {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*--------------------------------------------------------------
